# HomeSpeak

./: .gitignore
client/: README.md
client/ConsoleApp5/: Program.cs
client/HomeSpeakClient/: HomeSpeakClient.sln
client/HomeSpeakClient/HomeSpeakClient/: Form1.Designer.cs  Form1.cs  HomeSpeakClient.csproj  Program.cs
client/HomeSpeakClient/HomeSpeakClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
server/: CMakeLists.txt  README.md  client.cpp  client.h  core.cpp  core.h  dbmanager.cpp  dbmanager.h  main.cpp  tcpserver.cpp  tcpserver.h
